# ISProject

./: .gitignore  CMakeLists.txt  CMakeSettings.json  DESIGN_PATTERNS.md  LEVELS_INFO.md  README.md  Sokoban.sln  levels.json  vcpkg.json
SokobanCore/: CMakeLists.txt  SokobanCore.vcxproj
SokobanCore/Enums/: EGameState.h
SokobanCore/Game/: Game.cpp  Game.h  GameMap.cpp  Tile.h
SokobanCore/Interfaces/: IGame.h  IGameObject.h  IGameSubject.h
SokobanCore/Objects/: Box.h  GameObject.h  Player.cpp  Player.h
SokobanCore/include/: Box.h  Game.h  GameMap.h  GameObject.h  Player.h  Position.h  Tile.h
SokobanCore/include/enums/: EFacing.h  EGameEvent.h  EGameState.h  ETileType.h
SokobanCore/include/interfaces/: IGame.h  IGameMap.h  IGameObject.h  IGameObserver.h  IGameSubject.h
SokobanCore/src/: Box.cpp  Game.cpp  GameMap.cpp  GameObject.cpp
SokobanGame/: SokobanGame.sln  SokobanGame.vcxproj
SokobanTests/: CMakeLists.txt  SokobanTests.cpp  SokobanTests.vcxproj  SokobanTests.vcxproj.filters
SokobanTests/src/core_tests/: GameMapTest.cpp  GameObjectTest.cpp  GameTest.cpp  PlayerTest.cpp  PositionTest.cpp  SimpleTest.cpp  TileTest.cpp  pch.h
SokobanUI/: CMakeLists.txt  README_FRONTEND.md  SokobanUI.vcxproj  main.cpp
SokobanUI/include/: GUI_View.h
SokobanUI/src/: GUI_View.cpp
